[package]
name = "mpc-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha3 = "0.10"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
zeroize = "1.7"
hex = "0.4"
anyhow = "1.0"
base64ct = "=1.7.3"
